# zeb-visualization-suite-prototype

./: .editorconfig  README.md
api/: .env.example  .gitignore  README.md  pyproject.toml  wsgi.py
api/app/: config.py  endpoints.py
api/app/influxdb_operations/: db_client.py
api/app/utils/: data_processing.py
web/: README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/src/: types.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/accumulated-balance/: page.tsx
web/src/app/energy-balance/: page.tsx
web/src/app/energy-balance/energy-in-out/: page.tsx
web/src/components/: info.tsx
web/src/components/buttons/: toggle-button.tsx
web/src/components/charts/: DivergingStackedBar.tsx  Sankey.tsx  common.tsx  index.tsx
web/src/components/charts/Line/: customLegend.tsx  index.tsx
web/src/components/charts/Line/layers/: AreaLayer.tsx  LineLayer.tsx
web/src/components/menus/: sidebar.tsx  site-header.tsx
web/src/components/sidebar/: side-nav.tsx
web/src/components/ui/: alert.tsx  breadcrumb.tsx  button.tsx  label.tsx  nav-item.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  tooltip.tsx
web/src/config/: color.ts  locale.ts  nav.ts  options.ts
web/src/context/: NavbarContext.tsx  OptionsContext.tsx
web/src/hooks/: useColors.tsx  useCustomLineLayers.tsx  useNav.tsx
web/src/utils/: accumulatedBalance.ts  api.ts  barChart.ts  charts.ts  data.ts  design.ts  energyInAndOut.ts  options.ts  router.ts
